--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "greencommute",
+  "name": "greenmetro",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -45,6 +45,8 @@
     "autoprefixer": "^10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.15.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.344.0",
     "next": "13.5.1",
     "next-themes": "^0.2.1",
@@ -52,10 +54,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
-    "tesseract.js": "^5.0.5",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.22.17"
   }
 }
