--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.62.8",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@web3modal/ethereum": "^2.7.1",
     "@web3modal/react": "^2.7.1",
+    "@web3modal/wagmi": "^5.1.11",
     "autoprefixer": "^10.4.18",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "encoding": "^0.1.13",
     "framer-motion": "^11.15.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.344.0",
